# csvpak

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
examples/contacts/: contacts.csv  contacts.json
examples/inventory/: inventory.csv  inventory.json
src/csvpak/: build.py  cli.py  csvw.py  database.py  export.py  redbean.py
tests/: test_build_export.py  test_csvw.py  test_database.py  test_pagination.py
webapp/: .init.lua  api.lua  delete.lua  exit.lua  index.lua  quit.lua  record.lua  rows.lua  shutdown.lua  success.lua
webapp/.lua/: csvpak_runtime.lua
webapp/static/: style.css
