[project]
name = "csvpak"
version = "0.1.0"
description = "Package redbean-based data editing environments from CSV and CSVW metadata"
readme = "README.md"
authors = [
    { name = "Edward Anderson" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "csvw>=3.7.0",
    "requests>=2.32.3",
]

[project.scripts]
csvpak = "csvpak.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks integration tests",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
